# hipfire-arwaky

./: .gitignore  .gitmodules  AGENT.md  Cargo.toml  Cargo.toml.full  cli  flake.nix  kernels  nix  registry  third_party
hipfire-master/: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE  LICENSE-MIT  NEXT-STEPS.md  NOTICE  PRIOR-ART.md  README.md  TODO.md  harness.sh  test-serve.sh
hipfire-master/.githooks/: pre-commit
hipfire-master/.github/: PULL_REQUEST_TEMPLATE.md
hipfire-master/.github/workflows/: ci.yml  claude-review.yml  no-gpu-ci.yml  registry.yml
hipfire-master/bench/: overnight-20260501T090528Z-mq3-residual-fusion.txt  overnight-20260501T091104Z-mq3-swiglu-fusion.txt  overnight-20260501T091651Z-mq6-residual-fusion.txt
hipfire-master/benchmarks/: bench_hip_dispatch.hip  bench_lds_wave64_gfx906.hip  bench_wave64_indexing_gfx906.hip  redline_vs_hip.md
hipfire-master/benchmarks/calib/: README.md
hipfire-master/benchmarks/prompts/: adaptive_kv_long_prefill.txt  lru_cache_pep8_strict.txt  lru_cache_single_blank.txt  merge_sort_thinking_off.txt  qwen2_smoke.txt  tool_call_read_file.txt  tool_call_system.txt
hipfire-master/benchmarks/references/: dots_ocr_smoke_001.json  dots_ocr_smoke_001_vllm.json  qwen2_1p5b_instruct_smoke.json
hipfire-master/benchmarks/results/: 2026-04-26-perf-regression-recovery.json  RETENTION.md  lmx-20260425T235830Z-7900xtx.json  lmx-20260425T235830Z-7900xtx.run.txt  lmx-20260425T235830Z-orchestrator.py.snapshot  lmx-20260425T235830Z-submit-ar-only.py.snapshot  lmx-longctx-131k-20260426T002835Z.json  lmx-longctx-131k-20260426T002835Z.run.txt  lmx-longctx-131k-orchestrator.py  lmx-longctx-20260426T000401Z.json  lmx-longctx-20260426T000401Z.run.txt  lmx-longctx-sidecar-orchestrator.py  lmx_submit_merge_sort.py
hipfire-master/benchmarks/scripts/: bench_dflash_27b_gfx906.sh  bench_pp_gfx906.sh
hipfire-master/benchmarks/vision/: check_filter_residual.py  comparison-2026-05-23.md  diff_dumps.py  dump_hf_reference.py  run_bench.sh
hipfire-master/cli/: bench_vs_ollama.ts  chat_pure.test.ts  chat_pure.ts  config_meta.test.ts  index.ts  package.json  parse_tool_calls.test.ts  registry.json  registry_loader.test.ts  registry_loader.ts  test_a3b_multiturn.ts  test_a3b_single.ts  test_issue_8_regression.ts
hipfire-master/crates/hip-bridge/: Cargo.toml
hipfire-master/crates/hipfire-arch-deepseek4/: Cargo.toml
hipfire-master/crates/hipfire-arch-dots-ocr/: Cargo.toml  README.md
hipfire-master/crates/hipfire-arch-lfm2moe/: Cargo.toml  NEXT-STEPS.md
hipfire-master/crates/hipfire-arch-llama/: Cargo.toml
hipfire-master/crates/hipfire-arch-minimax/: Cargo.toml
hipfire-master/crates/hipfire-arch-qwen2/: Cargo.toml  README.md
hipfire-master/crates/hipfire-arch-qwen35/: Cargo.toml
hipfire-master/crates/hipfire-dispatch/: Cargo.toml
hipfire-master/crates/hipfire-dispatch-tests/: Cargo.toml
hipfire-master/crates/hipfire-runtime/: Cargo.toml
hipfire-master/crates/hipfire-tui/: Cargo.toml  README.md
hipfire-master/crates/hsa-bridge/: Cargo.toml
hipfire-master/crates/redline/: BARRIER_RESEARCH.md  Cargo.toml  PHASE1_STATUS.md  PHASE2_RESULT.md  RESEARCH_AQL.md
hipfire-master/docker/: rocm7-builder.Dockerfile
hipfire-master/docs/: BENCHMARKS.md  CHAT.md  CLI.md  CONFIG.md  NIXOS.md  QUANTIZATION.md  QUANTIZE.md  SERVE.md  architecture-ids.md  deepseek4-pr-body.md  env-vars.md  multi-gpu-bringup-lessons.md  multi-gpu.md  upstream-merge-journal.md
hipfire-master/docs/governance/: relicense-2026-05.md
hipfire-master/docs/investigations/: 2026-05-24-dflash-mtp-prose-sweet-spot.md  2026-05-29-lfm2moe-port-design.md  2026-06-03-hunt3-engine-bugs.md  2026-06-05-kvarn-dual-scale-kv-port.md
hipfire-master/docs/lessons_learned/: gfx12_prefill_wmma_2026_05_19.md
hipfire-master/docs/methodology/: arch-port-validation.md  perf-benchmarking.md  rocprof-coverage.md
hipfire-master/docs/perf-checkpoints/: 2026-04-27-mmq-prefill-experiment-report.md  2026-04-27-strix-halo-q8-prefill.md  2026-05-04-gfx906-mmq-attribution.md  2026-05-04-gfx906-mmq-junroll.md  2026-05-04-gfx906-mmq-spill-reduction.md  2026-05-04-llamacpp-stock-comparison.md  2026-05-05-gfx906-decode-investigation.md  2026-05-05-gfx906-mmq-redesign-final.md  2026-05-26-gfx1100-prefill-wmma-validation.md  2026-05-26-gfx1151-decode-attention-pmc.md
hipfire-master/docs/plans/: 173-bench-residents-prompts.md  2026-05-30-hipfire-dispatch.md  2026-05-31-adaptive-kv-design.md  2026-05-31-adaptive-kv-plan.md  2026-05-31-adaptive-kv-spike0.md  2026-05-31-kv-vquant-and-setup-wizard.md  2026-05-31-kv-vquant-fwht-lloyd-v-design.md  2026-05-31-kv-vquant-fwht-lloyd-v-plan.md  2026-05-31-kv-vquant-phase2-full-matrix.md  2026-05-31-minimax-tiled-attention.md  dflash-trainer.md  (+61 more)
hipfire-master/nix/: dev-shell.nix
hipfire-master/registry/: v1.json
hipfire-master/scripts/: _detect-gpu.sh  ab-dispatch-validation.sh  adaptive_b_bench.sh  agentic-gate-jinja-tools.sh  agentic-gate.sh  amd_quickdeploy.sh  analyze_daemon_output.py  analyze_quant_mse.py  astrea.py  aureth_to_corpus.py  baseline_quant_smoke.sh  bench-cold.sh  bench-matrix.sh  bench_cache_matrix.sh  bench_cache_report.ts  bench_cache_runner.ts  bench_humaneval_completion.sh  bench_humaneval_dflash.py  bench_quant_quality.sh  bench_qwen36_ar_dflash.sh  bench_variants.sh  bisect-test.sh  bisect-testQA.sh  bisect_9b_decode.sh  build_mtp_vocab_sidecar.py  calibrate_multigpu.sh  capture_dots_ocr_activations.py  capture_dots_ocr_reference.py  capture_dots_ocr_vllm.py  capture_qwen2_reference.py  check-env-docs.py  check-mmq-active.sh  ci-rustfmt-changed.sh  ckpt_perf_ab.ts  ckpt_resume_byteident.ts  ckpt_resume_eyeball.ts  ckpt_resume_timing.ts  coherence-gate-deepseek4-mtp.sh  coherence-gate-deepseek4-recall.sh  coherence-gate-dflash.sh  (+120 more)
hipfire-master/tests/: daemon_mutex.sh  daemon_reject.sh  e2e_bump_reload.sh  e2e_kv_budget.sh  e2e_kv_reject.sh  e2e_run_reject.sh  test_iterative_awq_gptq.py  test_kernel_atlas.py
xtask/: Cargo.toml
xtask/src/: main.rs
(+1153 files in other folders)
