[workspace]
resolver = "2"
members = [
    "crates/hip-bridge",
    "crates/hsa-bridge",
    "crates/rdna-compute",
    "crates/hipfire-runtime",
    "crates/hipfire-arch-qwen35",
    "crates/hipfire-arch-qwen35-vl",
    "crates/hipfire-arch-llama",
    "crates/hipfire-arch-deepseek4",
    "crates/hipfire-arch-toy",
    "crates/hipfire-arch-qwen2",
    "crates/hipfire-arch-lfm2moe",
    "crates/hipfire-arch-minimax",
    "crates/hipfire-arch-dots-ocr",
    "crates/hipfire-quantize",
    "crates/hipfire-detect",
    "crates/hipfire-atlas",
    "crates/redline",
    "crates/hipfire-dispatch",
    "crates/hipfire-dispatch-tests",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
