[package]
name = "hipfire-arch-qwen2"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Qwen2 dense text decoder (GQA + RMSNorm + SwiGLU + 1-D RoPE, attention_bias=true). arch_id=7."

# Bring-up status: skeleton from hipfire-arch-toy template. config_from_hfq
# and load_weights are stubs at the time of crate creation; the forward
# path will be ported from hipfire-arch-qwen35::qwen35 with
# DeltaNet/MoE/q-k-norm-pre-RoPE removed and QKV bias added.
# See docs/plans/qwen_2.5_vlm.md phase 1 for the full bring-up plan.

[dependencies]
hipfire-runtime = { path = "../hipfire-runtime" }
hipfire-dispatch = { path = "../hipfire-dispatch" }
hip-bridge = { path = "../hip-bridge" }
rdna-compute = { path = "../rdna-compute" }
serde_json = "1"
