[package]
name = "hsa-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Thin Rust FFI to AMD HSA/ROCr runtime via dlopen — bypasses HIP launch overhead"

[dependencies]
libloading = "0.8"
thiserror = "2"

[dev-dependencies]
hip-bridge = { path = "../hip-bridge" }
